--- a/my-app/src/components/Carrousel/Carrousel.css
+++ b/my-app/src/components/Carrousel/Carrousel.css
@@ -38,3 +38,25 @@
 .carrousel-img.actif {
     display: block;
 }
+
+@media screen and (max-width: 1490px) {
+    .carrousel {
+        height: 255px;
+        margin: auto auto 15px auto;
+    }
+
+    .fleche {
+        width: 15px;
+    }
+    
+    .fleche-gauche {
+        margin-left: 5px;
+    }
+    .fleche-droite {
+        margin-right: 5px;
+    }
+
+    .carrousel-img {
+        height: 255px;
+    }
+}
