--- a/my-app/src/components/Banniere/Banniere.css
+++ b/my-app/src/components/Banniere/Banniere.css
@@ -31,3 +31,11 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media screen and (max-width: 1490px) {
+  .banniere-txt {
+    font-size: 20px;
+    left: 15px;
+    transform: translateY(-50%);
+  }
+}
