--- a/my-app/src/components/Tuile/Tuile.css
+++ b/my-app/src/components/Tuile/Tuile.css
@@ -37,3 +37,9 @@
     margin-right: 20px;
     position: absolute;
 }
+
+@media screen and (max-width: 1490px) {
+    .tuile {
+        min-height: 255px;
+    }
+}
