--- a/my-app/src/layouts/Layout.css
+++ b/my-app/src/layouts/Layout.css
@@ -3,3 +3,10 @@ main {
   margin: auto 10%;
   width: 80%;
 }
+
+@media screen and (max-width: 1490px) {
+  main {
+    margin: auto 5%;
+    width: 90%;
+  }
+}
