--- a/my-app/src/pages/404/404.css
+++ b/my-app/src/pages/404/404.css
@@ -18,3 +18,13 @@
   display: block;
   margin-top: 150px;
 }
+
+@media screen and (max-width: 1490px) {
+  .titre-404 {
+    font-size: 96px;
+  }
+  
+  .description-404 {
+    font-size: 18px;
+  }
+}
