--- a/my-app/src/pages/Accueil/Accueil.css
+++ b/my-app/src/pages/Accueil/Accueil.css
@@ -6,3 +6,17 @@
     gap: 50px 60px; 
     padding: 55px 50px;
 }
+
+@media screen  and (max-width: 1490px) {
+    .Accueil > .banniere {
+        height: 110px;
+        margin-bottom: 20px;
+    }
+
+    .liste-logements {
+        background-color: unset;
+        gap: 20px 0;
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
+}
