--- a/my-app/src/pages/Fiche-logement/Fiche.css
+++ b/my-app/src/pages/Fiche-logement/Fiche.css
@@ -69,3 +69,66 @@
 .description-equipements > .dropdown {
     width: 50%;
 }
+
+@media screen and (max-width: 1490px) {
+    .logements-propietaire {
+        display: block;
+    }
+
+    .titre-logement {
+        display: block;
+        font-size: 24px;
+        margin-bottom: 5px;
+    }
+
+    .endroit-logement {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .tags {
+        display: inline-flex;
+        flex-wrap: wrap;
+        gap: 10px 0;
+    }
+
+    .tags > .tag {
+        margin-left: 0px;
+        min-width: 50px;
+    }
+
+    .proprietaire-note {
+        display: inline-flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        margin-top: 25px;
+        width: 100%;
+    }
+
+    .information-propietaire {
+        margin-bottom: unset;
+        width: 100%;
+    }
+
+    .photo-propietaire {
+        height: 32px;
+        width: 32px;
+    }
+
+    .etoile {
+        height: 25px;
+        width: 25px;
+    }
+
+    .description-equipements {
+        display: block;
+    }
+
+    .description-equipements > .dropdown {
+        width: 100%;
+    }
+    
+    .dropdown {
+        margin-bottom: 20px;
+    }
+}
