--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,7 +7,8 @@ body {
 
 /* Polices */
 * {
-  font-family: "Coco Sharp";
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 /* Contenu */
